--- a/src/app/contador/contador.component.html
+++ b/src/app/contador/contador.component.html
@@ -1,3 +1,3 @@
 <button (click)="minus()">-</button>
-<span>{{ number }}</span>
+<span style="margin-right: 7px;">{{ number }}</span>
 <button (click)="sum()">+</button>
