--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <h1>{{ title }}</h1>
-<app-contador></app-contador>
-<app-botones></app-botones>
-<app-formulario></app-formulario>
-<app-bucles></app-bucles>
-<app-switch></app-switch>
+<main>
+  <article><app-contador/></article>
+  <article><app-botones></app-botones></article>
+  <article><app-formulario></app-formulario></article>
+  <article><app-bucles></app-bucles></article>
+  <article><app-switch></app-switch></article>
+  <article><app-formulario2></app-formulario2></article>
+</main>
